fix text align error in IE

--- a/tomatocart/trunk/templates/glass_gray/stylesheet.css
+++ b/tomatocart/trunk/templates/glass_gray/stylesheet.css
@@ -398,6 +398,7 @@ A:hover {
   float: left;
   width: 204px;
   height: auto;
+  text-align: left;
 }
 
 .boxNew {
